--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,35 @@
+.body {
+  font-family: arial, sans-serif;
+}
 
+.weather-app {
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+
+h1 {
+  color: #202124;
+  font-size: 24px;
+  line-height: 26px;
+  font-weight: normal;
+  margin-bottom: 0;
+}
+
+h2 {
+  color: #70757a;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: normal;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
