--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-.body {
+body {
   font-family: arial, sans-serif;
 }
 
@@ -28,6 +28,10 @@ li {
   font-size: 16px;
   line-height: 20px;
   font-weight: normal;
+}
+
+a {
+  text-decoration: none;
 }
 
 li:first-letter {
@@ -65,4 +69,9 @@ li:first-letter {
   position: relative;
   font-size: 16px;
   top: -34px;
+}
+
+.weather-temperature .active {
+  color: #70757a;
+  cursor: default;
 }
