--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: arial, sans-serif;
+  font-family: "Oxygen", sans-serif;
+  background-color: bisque;
 }
 
 h1 {
@@ -38,6 +39,13 @@ li:first-letter {
   text-transform: capitalize;
 }
 
+small {
+  display: block;
+  text-align: center;
+  margin-top: 15px;
+  font-size: small;
+}
+
 .weather-app-wrapper {
   max-width: 600px;
   margin: 40px auto;
@@ -45,7 +53,9 @@ li:first-letter {
 .weather-app {
   padding: 20px;
   border: 1px solid #dadde1;
+  border-style: none;
   border-radius: 5px;
+  background-color: #ffc168;
 }
 
 .overview {
